--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
             <a href="https://www.dennisloska.com">Home</a>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="https://www.dennisloska.com/privacy">Privacy</a>
           </nav>
         </header>
       </div>
