--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,10 @@
           </div>
 
           <nav>
-            <a href="https://www.dennisloska.com">Home</a>
+            <a href="https://www.dennisloska.com" target="_blank">Home</a>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="https://www.dennisloska.com/privacy">Privacy</a>
+            <a href="https://www.dennisloska.com/privacy" target="_blank">Privacy</a>
           </nav>
         </header>
       </div>
