--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,14 +40,8 @@
     <div id="main" role="main" class="container">
       {{ content }}
       {% for post in paginator.posts %}
-  <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-  <p class="author">
-    <span class="date">{{ post.date }}</span>
-  </p>
-  <div class="content">
-    {{ post.content }}
-  </div>
-{% endfor %}
+       {{ content }}
+      {% endfor %}
     </div>
 
     <div class="wrapper-footer">
