--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,18 @@
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="https://www.dennisloska.com/privacy" target="_blank">Privacy</a>
           </nav>
+          <script>
+  (function() {
+    var cx = '000633117782281407279:tla_0k3mm2g';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
         </header>
       </div>
     </div>
