--- a/style.scss
+++ b/style.scss
@@ -157,7 +157,11 @@ img {
 .masthead {
   padding: 20px 0;
   border-bottom: 1px solid $lightGray;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  
   @include mobile {
     text-align: center;
   }
