--- a/style.scss
+++ b/style.scss
@@ -152,7 +152,7 @@ img {
 
 .wrapper-masthead {
   margin-bottom: 50px;
-  background-color: #555;
+  background-color: #1a1a1a;
   color: #fff;
 }
 
