--- a/style.scss
+++ b/style.scss
@@ -278,9 +278,8 @@ nav {
 }
 
 .wrapper-footer {
-  margin-top: 50px;
+  margin-top: 20vh;
   border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
   background-color: #1a1a1a;
 }
 
