--- a/style.scss
+++ b/style.scss
@@ -289,6 +289,8 @@ footer {
   
   a {
     transition: transform .3s ease-out;
+    display: inline-block;
+    margin: 5px;
   } 
   a:hover {
     transform: translate(0, -5px); 
