--- a/style.scss
+++ b/style.scss
@@ -291,6 +291,9 @@ nav {
   margin-top: 10vh;
   border-top: 1px solid #ddd;
   background-color: #1a1a1a;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
 }
 
 footer {
