--- a/style.scss
+++ b/style.scss
@@ -291,7 +291,7 @@ nav {
   margin-top: 10vh;
   border-top: 1px solid #ddd;
   background-color: #1a1a1a;
-  position: absolute;
+  position: fixed;
   width: 100%;
   bottom: 0;
 }
